<resources>
    <string name="app_name">ServiceDemo</string>
    <string name="startMusic">Start Music</string>
    <string name="stopMusic">Stop Music</string>
    <string name="useOreo">Use Started-Service</string>
    <string name="useService">Use Started-Service
        Oreo Incompatible</string>
    <string name="useIntent">Use IntentService </string>
    <string name="useBound">Use BoundService</string>
    <string name="NotificationChannelID">ServiceDemoChannel</string>
    <string name="NotificationChannelName">"ServiceDemoChannel"</string>
    <string name="NotificationTextContent">dududududududududududududududududududududududududu</string>
    <string name="NotificationTitleContent">┬─┬ ノ( ゜-゜ノ) ......... (ノ ゜Д゜)ノ ︵ ┻━┻</string>
</resources>
